<resources>
    <string name="app_name">PatuhOAT</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Obat</string>
    <string name="title_activity_aturobat">Pengaturan Pegingat</string>
    <string name="title_activity_beranda">PatuhOAT</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_login">Masuk</string>
    <string name="title_activity_daftar">Daftar</string>
    <string name="key_send_article">keySendArticle</string>

    <string-array name="kategori">
        <item>- Pilih Kategori -</item>
        <item>Pasien</item>
        <item>Keluarga</item>
        <item>Dokter</item>
    </string-array>
    <string name="title_activity_report">Laporan Kepatuhan</string>
    <string name="title_activity_minumobat">PatuhOAT</string>
    <string name="title_activity_reward">Reward</string>
    <string name="title_activity_badreward">Badreward</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="register">Buat Akun</string>
    <string name="display_name">Nama Pengguna</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi (min 8 karakter)</string>
    <string name="create_a_new_acount">Buat Akun Baru</string>
    <string name="logout">Keluar</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Kata Sandi </string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Masuk</string>
    <string name="error_invalid_email">Email Tidak Valid</string>
    <string name="error_invalid_password">Kata Kunci Kurang Dari 8 Karakter</string>
    <string name="error_incorrect_password">Kata Sandi Salah</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_chat">ChatActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_request_fragment">Hello Requests Fragment</string>
    <string name="hello_fragment_chats">Hello Fragment Chats</string>
    <string name="hello_friends_fragment">hello Friends Fragment</string>
    <string name="display_name_setting">Nama PEngguna</string>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>

    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_chat2">ChatActivity2</string>
    <string name="title_home">home</string>
    <string name="title_artikel">Artikel</string>
    <string name="title_chats">Chats</string>
    <string name="settings">Settings</string>


    <string-array name="jenis_user">

        <item>Pasien</item>
        <item>Keluarga</item>
        <item>Dokter</item>

    </string-array>
    <string name="title_activity_listobatpasien">Listobatpasien</string>
    <string name="title_activity_berandalist">Berandalist</string>
    <string name="title_activity_artikel_row_list">ArtikelRowList</string>
    <string name="title_activity_detail_artikel">DetailArtikel</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_artikel_detail2">ArtikelDetail2</string>
    <string name="title_activity_list_nama_pasien">ListNamaPasien</string>
    <string name="title_activity_report_artikel">ReportArtikel</string>
    <string name="title_activity_list_artikel_pasien">ListArtikelPasien</string>
    <string name="title_activity_questionary">QuestionaryActivity</string>
    <string name="txt_question_1">Apakah terkadang anda lupa minum obat TBC?</string>
    <string name="txt_question_2">Seseorang terkadang tidak minum obat karena alasan lain selain lupa. Dalam 2 minggu terakhir, apakah ada kalanya anda tidak minum obat TBC?</string>
    <string name="txt_question_3">Apakah anda pernah mengurangi atau berhenti minum obat TBC tanpa memberitahu dokter anda karena anda merasa kondisi Anda lebih buruk minum obat TBC  tersebut?</string>
    <string name="txt_question_4">Ketika anda bepergian atau tidak di rumah, apakah anda terkadang lupa membawa obat TBC anda?</string>
    <string name="txt_question_5">Apakah anda minum seluruh obat TBC anda kemarin?</string>
    <string name="txt_question_6">Ketika anda merasa gejala penyakit anda membaik dan terkontrol, apakah terkadang anda menghentikan minum obat TBC anda?</string>
    <string name="txt_question_7">Minum obat setiap hari sangatlah tidak nyaman untuk beberapa individu. Apakah anda pernah merasa terganggu dalam mentaati program pengobatan TBC yang sedang anda jalani?</string>
    <string name="txt_question_8">Seberapa seringkah anda mengalami kesulitan dalam mengingat seluruh obat yang seharusnya anda minum?</string>
    <string name="txt_question_9">Apakah hasil pengujian BTA Anda?</string>
</resources>
